Fix for the bug "Cannot send to addresses containing an ampersand". Thanks for the patch Magnus and Robert. Approved by Ingo.

BUG: 117882

svn path=/branches/KDE/3.5/kdepim/; revision=571372